@@ -160,9 +160,9 @@ module Win32 : SYSDEPS = struct
     else
       None
 
+  external temp_dir_name: unit -> string = "caml_sys_temp_dir_name"
+  let temp_dir_name = temp_dir_name ()
 
-  let temp_dir_name =
-    try Sys.getenv "TEMP" with Not_found -> "."
   let quote s =
     let l = String.length s in
     let b = Buffer.create (l + 20) in
